<resources>
    <string name="app_name">Planets</string>
    <string name="distanceFromEarth">Distance from Earth:</string>
    <string name="diameter">Diameter:</string>
    <string name="numberOfHumans">Number of humans:</string>
    <string name="numberOfRobots">Number of robots:</string>
    <string name="officialGreeting">Official greeting:</string>
    <string name="buttonText">Move on!</string>
    <string name="greetingText">Why stay ?</string>
    <string name="imageShootingStartDesc">Shooting star</string>
    <string name="planetImage">Planet image</string>
    <string name="okButton">Ok</string>
    <string name="planetLocation">To find me just look up ...</string>
    <string name="planetHome">I found you.</string>
</resources>
